--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8081
 #DB connection
 spring.datasource.url=jdbc:mysql://localhost:3306/shop
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=12345
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
